@@ -24,8 +24,9 @@ CREATE TABLE media (
     published_version       mediumint unsigned default NULL,
     publish_date            datetime default NULL,
     checked_out_by          smallint unsigned default NULL,
-    retired                bool NOT NULL DEFAULT 0,
+    retired                 bool NOT NULL DEFAULT 0,
     trashed                 bool NOT NULL DEFAULT 0,
+    published               bool NOT NULL DEFAULT 0,
     PRIMARY KEY (media_id),
     KEY (category_id), KEY (media_type_id),
     KEY (url), KEY (title),
